--- a/multipage_website/index.html
+++ b/multipage_website/index.html
@@ -2,8 +2,8 @@
 <html>
     <body>
         <ol>
-            <li><a href="favclothing/">Here are some of my favorite clothing brands!!</a></li>
-            <li><a href="favbrand/">Here are some photos of my favorite clothes that I want! </a></li>
+            <li><a href="favclothing.html">Here are some of my favorite clothing brands!!</a></li>
+            <li><a href="favbrand.html">Here are some photos of my favorite clothes that I want! </a></li>
         </ol>
     </body>
 
