pushing my data

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <ol>
-            <li><a href="My class flow/">My class stream (basic html)</a></li>
-            <li><a href="My favorite thing/">My favorite things (hw1, basic html)</a></li>
-        </ol>
+        <table>
+            <tr>
+                <td><a href="My class flow/">My class stream (basic html)</a></td></tr>
+            <tr><td><a href="My favorite thing/">My favorite things (hw1, basic html)</a></td></tr>
+
+        </table>
     </body>
 
 </html>
