--- a/class_demo/index.html
+++ b/class_demo/index.html
@@ -2,8 +2,31 @@
 <html>
     <head>
         <title>Fun text experience</title>
+        <meta name="author" content="ZaTareen">
+        <meta name="keywords" content="demo, learning">
+        <style>
+            table, th, td{
+                border:1px solid black;
+                border-collapse: collpase;
+            }
+            p{
+                text-align: center;
+            }
+            .link{
+                font-size:smaller;
+            }
+            #funnt-text{
+                font-family: 'Courier New', Courier, monospace;
+            }
+
+        </style>
     </head>
     <body style="background-color: pink;">
+        <div style="background-color:white;">
+        <h1>fun <strong>test</strong> Experience</h1>
+        <p>This is just a filler part of my div</p>
+        </div>
+
             <table >
                 <tr style="background-color: rgb(58, 206, 93);">
                     <th>text thingies</th>
@@ -11,21 +34,21 @@
                 </tr>
                 <tr>
                     <td style="font-size: larger;"><p style="color:blueviolet">
-                        Lorem <strong>Ipsum</strong> is placeholder text commonly used in the graphic, 
-                        print, and publishing industries for previwing layours and visual 
+                        Lorem <strong>Ipsum</strong> is placeholder text <strong>commonly</strong> used in the graphic, 
+                        print, and <span style="background-color:bisque">publishing</span> industries for <i>previewing</i> layouts and visual 
                         mockups. 
                         </p>
                     </td>
-                    <td style="padding-left: 15px;">
+                    <td style="padding-left: 5%; padding-top:0px;">
                         <img src="images/flower.jpg" width="320" alt="arrow">
                     </td>
                 </tr>
                     <tr>
-                        <td style="font-family: 'Courier New', Courier, monospace;">list og links
+                        <td id="funny-text">list og links
                         <ol>
-                            <li><a href="https://www.google.com/" target="_blank">google</a></li>
-                            <li><a href="https://www.w3schools.com/" target="_blank">W3 schools</a></li>
-                            <li><a href="https://www.youtube.com/?bp=wgUCEAE%3D" target="_blank">Youtube</a></li>
+                            <li class="link"><a href="https://www.google.com/" target="_blank">google</a></li>
+                            <li class="link"><a href="https://www.w3schools.com/" target="_blank">W3 schools</a></li>
+                            <li class="link"><a href="https://www.youtube.com/?bp=wgUCEAE%3D" target="_blank">Youtube</a></li>
                         </ol>
                         </td>
                         <td>embedded things
