--- a/Classwork/index.html
+++ b/Classwork/index.html
@@ -21,4 +21,4 @@
             </ul>
         </div>
         <h1>Welcome!!</h1> 
-        <a href="https://zarat07.github.io/WebDesgin-fall2023/Classwork/index.html">Github Link</a> 
+        <a href="https://zarat07.github.io/WebDesgin-fall2023/Classwork">Github Link</a> 
