--- a/Classwork/index.html
+++ b/Classwork/index.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="css/style.css">
-        <style>
-            p {
-                color:bisque
-            }
-          
-        </style>
+        <link rel="stylesheet" href="../Classwork/css/style.css">
         <title>Home Page!</title>
     </head>
     <body>
+
         <div class="container">
             <ul class="nav">
                 <li><a href="../multipage_website/index.html">Multipage website</a></li>
@@ -21,4 +16,10 @@
             </ul>
         </div>
         <h1>Welcome!!</h1> 
-        <a href="https://zarat07.github.io/WebDesgin-fall2023/Classwork">Github Link</a> 
+        <h2>This is a photo of me!</h2>
+        <h3>My name is Zara Tareen and I am a Pakistani American girl who was born in Houston, Texas.
+             I have lived in Washington for most of my life. My favorite hobbies are playing volleyball 
+             and hiking. My dad and I love to go on simple and easy hikes on the weekend! I love my family,
+              friends, and food so so much!</h3>
+        <a href="https://zarat07.github.io/WebDesgin-fall2023/">Github Link</a> 
+     </body>
