--- a/Classwork/index.html
+++ b/Classwork/index.html
@@ -17,9 +17,11 @@
         </div>
         <h1>Welcome!!</h1> 
         <h2>This is a photo of me!</h2>
+        <img src="images/me.jpg" width="320" alt="arrow">
         <h3>My name is Zara Tareen and I am a Pakistani American girl who was born in Houston, Texas.
              I have lived in Washington for most of my life. My favorite hobbies are playing volleyball 
              and hiking. My dad and I love to go on simple and easy hikes on the weekend! I love my family,
               friends, and food so so much!</h3>
+              
         <a href="https://zarat07.github.io/WebDesgin-fall2023/">Github Link</a> 
      </body>
