--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                 <li><a href="../My class flow/index.html">My class flow</a></li>
                 <li><a href="../My favorite thing/index.html">My favorite thing</a></li>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="../css_grid">Css grid</a></li>
-                <li><a href="../css_gridchallenge">Css grid challenge</a></li>
+                <li><a href="../css_grid/index.html">Css grid</a></li>
+                <li><a href="../css_gridchallenge/index.html">Css grid challenge</a></li>
 
             </ul>
         </div>
