--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="../css_grid/index.html">Css grid</a></li>
                 <li><a href="../css_gridchallenge/index.html">Css grid challenge</a></li>
-                <li><a href="../twotruthsandlie/index.html">Css grid challenge</a></li>
+                <li><a href="../twotruthsandlie/index.html">Two truths and a lie</a></li>
 
             </ul>
         </div>
