commiting my main index

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href="../css_grid/index.html">Css grid</a></li>
                 <li><a href="../css_gridchallenge/index.html">Css grid challenge</a></li>
                 <li><a href="../twotruthsandlie/index.html">Two truths and a lie</a></li>
+                <li><a href="../bootstrap_demo/index.html">Bootstrap Demo</a></li>
 
             </ul>
         </div>
