--- a/webfinal/index.html
+++ b/webfinal/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS-Grid</title>
+    <title>Final Project</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -12,11 +12,16 @@
             <ul class="nav">
                 <li><img src="images/logo.png" alt="logo" style="width:100px;height:100px"></li>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="volunteer.html">Volunteer</a></li>
+                <li><a href="reviews.html">Reviews</a></li>
+                <li><a href="member.html">Member</a></li>
             </ul>
         </div>
 
-        <div class="grid-item main-image">
-            <p> <strong>GRAND OPENING</strong> of our Astrology, Magick, and Tarot Books on Saturday, Sept 7, from 2 to 6 pm.
+        <div class="grid-item banner">
+            <h1>GRAND OPENING</h1>
+            <p>Astrology, Magick, and Tarot Books on Saturday, Sept 7, from 2 to 6 pm.
                 The Seattle Metaphysical Library is dispursed and most of it is in storage</p>
             <p> We will reopen when we find an affordable space.<br>
                 Last updated Sept 5, 2023.</p>
@@ -37,46 +42,49 @@
             
             <p style="color:rgb(126, 19, 153)">Our events are limited now to occasional Zoom classes, Zoom meetings and off-site events - see a listing on the right, and details on our Events page.</p>
         <hr>
+        <h5>Community</h5>
         <p>Please feel free to send an email to staff@seattlemetaphysicallibrary.org if you would like to post something on the website, or send out a message in the newsletter.
 
             One of the benefits of our Library is an opportunity to interact with other people who share your interests. One way of allowing that exchange to continue is to reactivate 
-            the blog, and post contributions in the newsletter.
+            the blog, and post contributions in the newsletter.</p>
             <br>
             
-            Supporters Meeting
+            <p>Supporters Meeting
             We will continue to have our Supporters meetings once a month, as a Zoom meeting. If you are interested in being part of the support team that keeps the Library running, and would
-             like to participate in the Zoom meeting, email staff@seattlemetaphysicallibrary.org for the Zoom invitation.
-            <br><strong>Click Here to see Book Reviews</strong>
+             like to participate in the Zoom meeting, email staff@seattlemetaphysicallibrary.org for the Zoom invitation.</p>
+            <br>
             <hr>
             <br>
-            <h5>Volunteers</h5>    
-            We are always interested in reliable volunteers who care about the Library. Meet other people with the same esoteric interests that you have.  The Library has over 16,000 books, 
+            <h5>Volunteers</h5>  
+           <p> We are always interested in reliable volunteers who care about the Library. Meet other people with the same esoteric interests that you have.  The Library has over 16,000 books, 
             and they need to stay organized by category - volunteering is a great way to see what the Library has to offer. We also need help with publicity, fundraising, helping members and visitors, 
             leading discussion groups and events. E-mail us or stop by if interested.</p>
             <hr>
             <h5>Library Contents</h5>
+            <p>
             Mind-Body Healing, Rife Technologies, Goddess Studies, Ancient Egypt, Alternative Health, Ayurvedic Medicine, Christianity, Buddhism, Art, Chinese Philosophy, UFOs, Gender Studies, Parapsychology, Dead Sea Scrolls, New Physics, Rudolf Steiner, Alchemy, Astronomy, Shamanism, Sufism, Qabbala, Herbalism, Ancient Near East, Atlantis, Pre-Columbian America, Theosophy, Magik, Tarot, Near Death research, Tibetan Buddhism, History, Politics and Conspiracies, Secret Societies, Occult Fiction, Science Fiction, Tesla Technologies, Edgar Cayce, Comparative Religion, Yoga, Consciousness Studies, and much more!
 
             For a detailed list of topics please see our Booklist page.
-
+            </p>
             <hr>
             <h5>Stories About Us</h5>
-            Can You Find Seattle's Most Secret Library?
-            <strong>Alert</strong> - this is archived on Archive.org - the original site has been removed. Archive.org takes a while to search its database and render the page, so be patient.
+            <a href="http://web.archive.org/web/20180709225313/https://www.ozy.com/good-sht/can-you-find-seattles-most-secret-library/80670" target="_blank">Can you find seattles most secret library?</a>
+            <p>
+            <strong>Alert</strong> - this is archived on Archive.org - the original site has been removed. Archive.org takes a while to search its database and render the page, so be patient.</p>
         </div>
         <div class="grid-item sidenav">
             <h3>About Martha!</h3>
             <img src="images/martha.png" alt="martha">
             <p>Martha has a warm invitation for interested people to visit the reading room she and other volunteers have set up in the basement of her house for your use. Please contact her to get her address, and to set up a time to visit.
-            You may email her at marth@seattlemetaphysicallibrary.org or call her at <br><strong>(206) 551-8277.<br></strong> 
+            You may email her at <a href="mailto:marth@seattlemetaphysicallibrary.org " style="font-size:20px;">marth@seattlemetaphysicallibrary.org </a> or call her at <br><strong>(206) 551-8277.<br></strong> 
             The phone will usually get a faster response than the email</p>
-            She will have a copy of the membership database, and if you are a paid-up member, you may borrow and return books here.	
-            We are working on setting up a branch reading room on Mercer Island for Meditation and Buddhist books. 
+            <p>She will have a copy of the membership database, and if you are a paid-up member, you may borrow and return books here.	
+            We are working on setting up a branch reading room on Mercer Island for Meditation and Buddhist books.</p>
         </div>
 
     </div>
     <div class="footer">
-        Created by &copy; Tareen and Webdesign class fall 2023
+        Created by &copy; Tareen and Webdesign Final
     </div>
 </body>
 </html>
